@startuml
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam classFontSize 18
skinparam classFontName Menlo
skinparam classAttributeFontSize 18
skinparam classAttributeFontName Menlo
skinparam shadowing false

hide circle

interface Item1
class Item2
class Item3

Item1 <|.. Item2

Item2 <|-r- Item3
@enduml